Copy HTML from wiki

--- a/_includes/nav-menu.html
+++ b/_includes/nav-menu.html
@@ -11,9 +11,10 @@
             </div>
             <h2 class="toc-empty-header"></h2>
             <ul>
-                <li value="3" class="feedback"><a {% if urlSections[1] == 'news'       %} class="active" {% endif %} href="/news/">News & Updates</a></li>
-                <li value="2"><a {% if urlSections[1] == 'contribute' %} class="active" {% endif %} href="/contribute/">Contribute / Feedback</a></li>
-                <li value="1"><a {% if urlSections[1] == 'preface'    %} class="active" {% endif %} href="/preface">Preface</a></li>
+                <li value="4" class="feedback"><a {% if urlSections[1] == 'news' %} class="active" {% endif %} href="/news/">News & Updates</a></li>
+                <li value="3"><a {% if urlSections[1] == 'contribute'   %} class="active" {% endif %} href="/contribute/">Contribute / Feedback</a></li>
+                <li value="2"><a {% if urlSections[1] == 'preface'      %} class="active" {% endif %} href="/preface">Preface</a></li>
+                <li value="1"><a {% if urlSections[1] == 'introduction' %} class="active" {% endif %} href="/introduction">Introduction</a></li>
             </ul>
         </div>
 
